--- a/config/database.yml
+++ b/config/database.yml
@@ -9,14 +9,13 @@ default: &default
   pool: 5
   timeout: 5000
   encoding: utf8
-  username: sqale_19a40eeb84
-  password: cb683bebb48242a904da241c26bc4c7aad0285d1148a470f
+  username: root
+  password:
   socket: /tmp/mysql.sock
-  host: mysql001.sqale.jp
 
 development:
   <<: *default
-  database: sqale_19a40eeb84
+  database: Seekle_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -29,5 +28,10 @@ production:
   <<: *default
   username: root
   database: Seekle_production
+
+
+
+
+
 
 
