--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
-
+/public/uploads/tmp/
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
